# Flask-Constance

./: .gitignore  .readthedocs.yml  CHANGELOG.rst  LICENSE  README.md  README.rst  pyproject.toml
.github/workflows/: Coverage.yml  codecov.yml  lint.yml  mypy.yml  publish.yml  tests.yml
docs/: Makefile  api.rst  conf.py  guide.rst  index.rst  installation.rst  quickstart.rst  req.txt
examples/admin/: app.py
examples/fsqla/: app.py
examples/rest/: app.py
flask_constance/: __init__.py  cli.py  const.py  core.py  exc.py  globals.py  signals.py  storage.py  view.py
flask_constance/admin/: __init__.py  form.py  view.py
flask_constance/admin/templates/: settings.html.j2
flask_constance/backends/: __init__.py  base.py  core.py  exc.py  fsqla.py  memory.py  redis.py
tests/: conftest.py  test_admin.py  test_backends.py  test_cli.py  test_config.py  test_storage.py  test_view.py
tests/backends/: test_fsqla.py  test_memory.py
