[tool.poetry]
name = "Flask-Constance"
version = "0.1.0"
description = "Dynamic settings for Flask applications"
authors = ["Ivan Fedorov <inbox@titaniumhocker.ru>"]
license = "MIT"
homepage = "https://github.com/TitaniumHocker/Flask-Constance"
repository = "https://github.com/TitaniumHocker/Flask-Constance"
documentation = "https://flask-constance.rtfd.io"
keywords = ["flask", "extension"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "Framework :: Flask",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Libraries"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/TitaniumHocker/Flask-Constance/issues"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
flask-mongoengine = {version = "^1.0.0", optional = true, extras = ["mongoengine"]}
Flask-SQLAlchemy = {version = "^2.5.1", optional = true, extras = ["fsqla"]}
redis = {version = "^4.4.4", optional = true, extras = ["redis"]}
Flask-PyMongo = {version = "^2.3.0", optional = true, extras = ["pymongo"]}
peewee = {version = "^3.14.4", optional = true, extras = ["peewee"]}

[tool.poetry.group.dev.dependencies]
mypy = "^0.910"
pytest = "^6.2.4"
types-redis = "^3.5.4"
coverage = {extras = ["toml"], version = "^5.5"}
pytest-cov = "^2.12.1"
pytest-redis = "1.3.2"
Flask-SQLAlchemy = "^2.5.1"
redis = "^4.4.4"
flake8 = "<5.0.0"
flakeheaven = "^3.2.1"
flake8-isort = "^6.0.0"
flake8-black = "^0.3.6"
flake8-docstrings = "^1.6.0"
flake8-bandit = "<4.0.0"
pydocstyle = "^6.2.2"

[tool.black]
line_length = 100

[tool.flakehell]
format = "colored"
max_line_length = 100
extended_default_ignore=[] # https://github.com/flakehell/flakehell/issues/10

[tool.flakehell.plugins]
pyflakes = ["+*"]
pycodestyle = ["+*", "-W503"]
flake8-docstrings = ["+*", "-D400", "-D107", "-D204", "-D105", "-D100"]
flake8-isort = ["+*"]
flake8-black = ["+*"]

[tool.flakehell.exceptions."tests/*"]
flake8-docstrings = ["-*"]
pycodestyle = ["-F401"]

[tool.isort]
profile = "hug"
src_paths = ["flask_constance", "tests"]

[tool.pytest.ini_options]
testpaths = [
    "tests"
]

[tool.coverage.run]
source = [
    "flask_constance"
]

[tool.coverage.report]
fail_under = 80
show_missing = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
